# rust-macro-demo

./: Cargo.toml  docker-compose.yml
src/: main.rs
