[package]
name = "rust-macro-check"
version = "0.1.0"
edition = "2018"

# proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features=["with-uuid-0_8", "with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
field_names = "0.2.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"]}
bigdecimal = { version = "0.2.0", features = ["serde"] }
rust_decimal = { version = "1.22", features = ["db-tokio-postgres"] } 
rust_decimal_macros = "1.22"
rand = "*"
paste = "1.0"
quote = "*"
syn = "*"
